fix z-index on certain devices

--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -93,6 +93,7 @@ li.placeholder {
 
 #settingslink {
   margin: 0 auto 1.25rem;
+  z-index: 1;
 }
 
 @media (min-width: 992px) {
